<resources>
    <string name="app_name">乗り過ごし防止</string>
    <string name="notify_title">乗り過ごし防止アプリ</string>
    <string name="title_activity_maps">乗り過ごし防止</string>

    <string name="startButton">セット</string>
    <string name="stopButton">停止</string>
    <string name="firstSetting">都道府県</string>
    <string name="secondSetting">路線</string>
    <string name="thirdSetting">駅</string>

    <string-array name="prefectures">
        <item name="Hokkaido">北海道</item>
        <item name="Aomori">青森県</item>
        <item name="Iwate">岩手県</item>
        <item name="Miyagi">宮城県</item>
        <item name="Akita">秋田県</item>
        <item name="Yamagata">山口県</item>
        <item name="Hukusima">福島県</item>
        <item name="Ibaraki">茨城県</item>
        <item name="Tochigi">栃木県</item>
        <item name="Gunma">群馬県</item>
        <item name="Saitama">埼玉県</item>
        <item name="Tiba">千葉県</item>
        <item name="Tokyo">東京都</item>
        <item name="Kanagawa">神奈川県</item>
        <item name="Niigata">新潟県</item>
        <item name="Toyama">富山県</item>
        <item name="Ishikawa">石川県</item>
        <item name="Hukui">福井県</item>
        <item name="Yamanashi">山梨県</item>
        <item name="Nagano">長野県</item>
        <item name="Gifu">岐阜県</item>
        <item name="Shizuoka">静岡県</item>
        <item name="Aichi">愛知県</item>
        <item name="Mie">三重県</item>
        <item name="Shiga">滋賀県</item>
        <item name="Kyoto">京都府</item>
        <item name="Osaka">大阪府</item>
        <item name="Hyogo">兵庫県</item>
        <item name="Nara">奈良県</item>
        <item name="Wakayama">和歌山県</item>
        <item name="Tottori">鳥取県</item>
        <item name="Shimane">島根県</item>
        <item name="Okayama">岡山県</item>
        <item name="Hiroshima">広島県</item>
        <item name="Yamaguti">山口県</item>
        <item name="Tokushima">徳島県</item>
        <item name="Kagawa">香川県</item>
        <item name="Ehime">愛媛県</item>
        <item name="Koti">高知県</item>
        <item name="Hukuoka">福岡県</item>
        <item name="Saga">佐賀県</item>
        <item name="Nagasaki">長崎県</item>
        <item name="Kumamoto">熊本県</item>
        <item name="Oita">大分県</item>
        <item name="Miyazaki">宮崎県</item>
        <item name="Kagoshima">鹿児島県</item>
        <item name="Okinawa">沖縄県</item>
    </string-array>

    <string name="search">駅名で検索</string>
    <string name="add_preset">追加</string>
    <string name="setting_list_ringtone">到着時のアラーム音</string>
    <string name="ringtone_setting_title">アラーム音設定</string>
    <string name="setting">設定</string>
    <string name="about_this">このアプリについて</string>
    <string name="open_source_library">オープンソースライブラリについて</string>
    <string name="title_activity_bottom">Bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
